# Prismatic-Engine

./: .dockerignore  .gitignore  README.md  count_lines.py  prismatic.db  pyproject.toml  text.txt  words_counter.py
alembic/: env.py
alembic/versions/: 27e9da1c2dc4_add_evergreen_sources_and_content_.py  2a2327906424_add_angle_matrix_table.py  31734632cca0_add_evergreen_source_youtube_enum.py  336666b3c17a_add_phase_4_strategy_models_v2.py  41f3ad317c8b_initial_schema_v4.py  6c3fe2cf976d_add_generated_content_table.py  6cd4e37faf24_initial.py  71ac8fe19d24_add_content_atoms_table.py  782eb8162e4b_add_angle_matrix_table_v2.py  7f7562aad66b_restart_initial_tables_v2_and_fixed_.py  8ab78d9504af_restart_initial_tables_v2.py  a0f34be1b552_deleted_blog_scrappers_tables_v2.py  a26543338aa2_remove_lifecycle_metadata_from_content_.py  bc1f3210c11b_add_emotional_arc_and_mode_sequence_.py  fe8dcf95c743_initial_schema.py
app/: config.py  main.py
app/api/: __init__.py  classification_routes.py  creation_routes.py  delivery_routes.py  ingestion.py  ingestion_routes.py  strategy_routes.py
app/classification/: __init__.py  classifier.py  db_services.py  prompts.py  schemas.py  services.py
app/creation/: __init__.py  db_services.py  mode_matrix.py  schemas.py  service.py  temperature_config.py
data/: authors.backup_20260113_232414.json  authors.json  tracker.backup_20260113_231216.json  tracker.backup_20260113_232414.json  tracker.json
docs/: PRISMATIC_ENGINE_DOCUMENTATION.md
scripts/: authors_config.py  books.yaml  seed_books.py  verify_reservoir_harvest.py
(+389 files in other folders)
