[tool.poetry]
name = "prismatic-engine"
version = "0.1.0"
description = ""
authors = ["Aditya Jha <ngc.aditya010@gmail.com>"]
readme = "README.md"
package-mode = false

[project]
name = "prismatic-engine"
version = "0.1.0"
description = ""
authors = [
    { name = "Aditya Jha", email = "ngc.aditya010@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi[standard] (>=0.124.0,<0.125.0)",
    "langchain (>=1.1.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.1,<2.0.0)",
    "langchain-anthropic (>=1.2.0,<2.0.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "langchain-huggingface (>=1.1.0,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langsmith (>=0.4.58,<0.5.0)",
    "openai (>=2.9.0,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "chromadb (>=1.3.6,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "sentry-sdk (>=2.47.0,<3.0.0)",
    "posthog (<6.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "faiss-cpu (>=1.13.1,<2.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
